# priede

./: .gitignore  README.md  build-gram.py  build-wasm.py  build_gram.py  build_wasm.py  release.py  releases.json
cli/: Cargo.toml
compiler/: Cargo.toml
docs/: docusaurus.config.js  package.json
etc/: priede.afdesign
examples/: other_file.pr  sveika_pasaule.pr  taisnst_kord.pr  testdata.pd  testdata.st
interpreter/: Cargo.toml
interpreter/src/: ast.rs  ast_parser.rs  compiler.rs  errors.rs  formater.rs  interpreter.rs  lib.rs  libloader.rs  main.rs  parse_ast.rs  parser.rs  priede_std.rs  state.rs
interpreter/src/compiler/: mod.rs
interpreter/src/data_format/: build-gram.py  data_format.gram  mod.rs  priede_data.rs
interpreter/src/executor/: executor.rs  math.rs  mod.rs  stack_actions.rs
interpreter/src/generator/: ast_parser.rs  bytecode.rs  generator.rs  mod.rs
interpreter/src/generator/hime/: priede.gram  priede.rs
interpreter/src/hime/: priede.gram  priede.rs
interpreter/src/lib/: priede_std.rs
interpreter/src/parse_ast/: array.rs  array_def.rs  comparisons.rs  constants.rs  dot_syntax.rs  func_call.rs  func_def.rs  id.rs  id_assign.rs  if_stat.rs  include.rs  index.rs  loops.rs  math_ops.rs  mod.rs  objects.rs  return_st.rs  stumbrs.rs  var_def.rs
interpreter/src/priede_std/: io.rs
interpreter/src/util/: mod.rs
interpreter/tests/: arrays.rs  clevercode.rs  if.rs  loops.rs  objects.rs  other.rs  var_scoping.rs  variables.rs
launcher/: index.html  package.json
linter/: Cargo.toml
vscode/: README.md  (+10 more)
wasm/: Cargo.toml
wasm/pkg/: package.json  priede_wasm-0.1.0.tgz  priede_wasm_bg.wasm
wasm/src/: lib.rs
(+120 files in other folders)
