[package]
name = "priede_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
interpreter = {path = "../interpreter"}
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"

[lib]
crate-type = ["cdylib", "rlib"]
